完成用户部分的接口
Signed-off-by: chenjian <“whut_chj@163.com”>

--- a/pom.xml
+++ b/pom.xml
@@ -233,6 +233,15 @@
             <artifactId>jedis</artifactId>
             <version>2.9.0</version>
         </dependency>
+
+        <!--alimessage-->
+        <dependency>
+            <groupId>com.aliyun</groupId>
+            <artifactId>aliyun-java-sdk-core</artifactId>
+            <version>3.3.1</version>
+        </dependency>
+
+
     </dependencies>
     <build>
         <finalName>yinyuepiaoliu</finalName>
