--- a/src/main/resources/mmall.properties
+++ b/src/main/resources/mmall.properties
@@ -8,5 +8,5 @@ ftp.server.http.prefix=http://img.lixiaofang.cn/
 #alipay.callback.url=http://www.happymmall.com/order/alipay_callback.do
 alipay.callback.url=http://www.lixiaofang.cn/order/alipay_callback.do
 #
-password.salt = geelysdafaqj23ou89ZXcj@#$@#$#@KJdjklj;D../dSF.,
+password.salt = yinyuepiaoliusdafaqj23ou89ZXcj@#$@#$#@KJdjklj;D../dSF.,*&(($@$^*^**^*&*&&^$
 
