修改了一些bug，包括Date参数如何接收，更新操作时需要修改更新时间这个字段，时间格式改为24小时制，都通过了测试
Signed-off-by: chenjian <“whut_chj@163.com”>

--- a/pom.xml
+++ b/pom.xml
@@ -78,10 +78,28 @@
             <version>1.6.11</version>
         </dependency>
 
-        <dependency>
+        <!--json-->
+        <!--<dependency>
             <groupId>org.codehaus.jackson</groupId>
             <artifactId>jackson-mapper-asl</artifactId>
             <version>1.9.12</version>
+        </dependency>-->
+
+        <!--MappingJackson2HttpMessageConverter-->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>2.9.3</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.9.3</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>2.9.3</version>
         </dependency>
 
         <dependency>
@@ -132,7 +150,7 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.12</version>
-            <scope>test</scope>
+            <!--<scope>test</scope>-->
         </dependency>
 
         <dependency>
