添加了修改头像的接口：分为搭建ftp环境，nginx环境，将ftp和nginx打通为图片服务器，修复了一些bug 用户模块的所有接口都已经完成，且通过了测试
Signed-off-by: chenjian <“whut_chj@163.com”>

--- a/src/main/resources/mmall.properties
+++ b/src/main/resources/mmall.properties
@@ -1,12 +1,12 @@
-
-ftp.server.ip=10.138.104.136
-ftp.user=ftpuser
-ftp.pass=123456
+ftp.server.ip=39.108.10.0
+ftp.user=yyplftpuser
+ftp.pass=oIZOg64899WMipBAlpNCxf!7W#vnq1
 ftp.server.http.prefix=http://img.lixiaofang.cn/
-#
-#
+
+
 #alipay.callback.url=http://www.happymmall.com/order/alipay_callback.do
 alipay.callback.url=http://www.lixiaofang.cn/order/alipay_callback.do
-#
-password.salt = yinyuepiaoliusdafaqj23ou89ZXcj@#$@#$#@KJdjklj;D../dSF.,*&(($@$^*^**^*&*&&^$
+
+#盐值
+password.salt = !^%!!@@$!#&*#$..{*@$%}#%#*$((%@!#%#-$@&#^`!^*@%#^))%$@!$*%
 
