--- a/pom.xml
+++ b/pom.xml
@@ -266,6 +266,13 @@
             <version>4.5.4</version>
         </dependency>
 
+        <!--dom4j-->
+        <dependency>
+            <groupId>dom4j</groupId>
+            <artifactId>dom4j</artifactId>
+            <version>1.6.1</version>
+        </dependency>
+
     </dependencies>
     <build>
         <finalName>yinyuepiaoliu</finalName>
